--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "alembic (>=1.14.1,<2.0.0)",
-    "sqladmin (>=0.20.1,<0.21.0)",
+    "sqladmin[full] (>=0.21.0,<0.22.0)",
     "orjson (>=3.10.15,<4.0.0)",
     "itsdangerous (>=2.2.0,<3.0.0)",
     "google-api-python-client (>=2.163.0,<3.0.0)",
