--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "celery (>=5.5.2,<6.0.0)",
     "redis (>=6.2.0,<7.0.0)",
     "qrcode[pil] (>=8.2,<9.0)",
+    "httpx (>=0.28.1,<0.29.0)",
 ]
 
 
